--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Snake game with database",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "keywords": [
     "snake"
